--- a/Code/JAVA/Recipes/src/recipes_gui/RecipeDescription.form
+++ b/Code/JAVA/Recipes/src/recipes_gui/RecipeDescription.form
@@ -43,7 +43,7 @@
           <grid row="1" column="1" row-span="1" col-span="1" vsize-policy="6" hsize-policy="1" anchor="0" fill="2" indent="0" use-parent-layout="false"/>
         </constraints>
       </vspacer>
-      <grid id="b5d4e" layout-manager="GridLayoutManager" row-count="2" column-count="2" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
+      <grid id="b5d4e" layout-manager="GridLayoutManager" row-count="4" column-count="2" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
         <margin top="0" left="0" bottom="0" right="0"/>
         <constraints>
           <grid row="1" column="0" row-span="1" col-span="1" vsize-policy="3" hsize-policy="3" anchor="0" fill="3" indent="0" use-parent-layout="false"/>
@@ -84,7 +84,7 @@
           </grid>
           <vspacer id="f71d0">
             <constraints>
-              <grid row="1" column="0" row-span="1" col-span="1" vsize-policy="6" hsize-policy="1" anchor="0" fill="2" indent="0" use-parent-layout="false"/>
+              <grid row="1" column="0" row-span="3" col-span="1" vsize-policy="6" hsize-policy="1" anchor="0" fill="2" indent="0" use-parent-layout="false"/>
             </constraints>
           </vspacer>
           <grid id="6f8aa" layout-manager="GridLayoutManager" row-count="6" column-count="2" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
@@ -92,64 +92,108 @@
             <constraints>
               <grid row="1" column="1" row-span="1" col-span="1" vsize-policy="3" hsize-policy="3" anchor="0" fill="3" indent="0" use-parent-layout="false"/>
             </constraints>
-            <properties/>
+            <properties>
+              <background color="-13149860"/>
+              <foreground color="-13149860"/>
+            </properties>
             <border type="none"/>
             <children>
-              <component id="a8d1c" class="javax.swing.JCheckBox" binding="checkBox1" default-binding="true">
+              <component id="d241" class="javax.swing.JLabel">
                 <constraints>
-                  <grid row="5" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
+                  <grid row="0" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="0" fill="0" indent="0" use-parent-layout="false"/>
                 </constraints>
                 <properties>
-                  <text value="CheckBox"/>
+                  <font name="Bookman Old Style" size="14" style="0"/>
+                  <foreground color="-3735570"/>
+                  <text value="Gluten free"/>
                 </properties>
               </component>
-              <hspacer id="be92b">
+              <component id="874e5" class="javax.swing.JLabel">
                 <constraints>
-                  <grid row="0" column="0" row-span="6" col-span="1" vsize-policy="1" hsize-policy="6" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
-                </constraints>
-              </hspacer>
-              <component id="e106e" class="javax.swing.JCheckBox" binding="checkBox2" default-binding="true">
-                <constraints>
-                  <grid row="3" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
+                  <grid row="2" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="0" fill="0" indent="0" use-parent-layout="false"/>
                 </constraints>
                 <properties>
-                  <text value="CheckBox"/>
+                  <font name="Bookman Old Style" size="14" style="0"/>
+                  <foreground color="-3735570"/>
+                  <text value="Milk free"/>
                 </properties>
               </component>
-              <component id="68663" class="javax.swing.JCheckBox" binding="checkBox3" default-binding="true">
+              <component id="e4c8f" class="javax.swing.JLabel">
                 <constraints>
-                  <grid row="1" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
+                  <grid row="4" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="0" fill="0" indent="0" use-parent-layout="false"/>
                 </constraints>
                 <properties>
-                  <text value="CheckBox"/>
+                  <font name="Bookman Old Style" size="14" style="0"/>
+                  <foreground color="-3735570"/>
+                  <text value="Vegan"/>
                 </properties>
               </component>
-              <component id="4730d" class="javax.swing.JLabel">
+              <component id="38dec" class="javax.swing.JCheckBox" binding="GlutenFreeCheck">
                 <constraints>
-                  <grid row="0" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="2" fill="0" indent="0" use-parent-layout="false"/>
+                  <grid row="1" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="0" indent="0" use-parent-layout="false"/>
                 </constraints>
                 <properties>
-                  <text value="Label"/>
+                  <background color="-13149860"/>
+                  <text value=""/>
                 </properties>
               </component>
-              <component id="e92c8" class="javax.swing.JLabel">
+              <component id="9c78a" class="javax.swing.JCheckBox" binding="MilkFreeCheck">
                 <constraints>
-                  <grid row="2" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="2" fill="0" indent="0" use-parent-layout="false"/>
+                  <grid row="3" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="0" indent="0" use-parent-layout="false"/>
                 </constraints>
                 <properties>
-                  <text value="Label"/>
+                  <background color="-13149860"/>
+                  <text value=""/>
                 </properties>
               </component>
-              <component id="dea46" class="javax.swing.JLabel">
+              <component id="f52e5" class="javax.swing.JCheckBox" binding="VeganCheck">
                 <constraints>
-                  <grid row="4" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="2" fill="0" indent="0" use-parent-layout="false"/>
+                  <grid row="5" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="0" indent="0" use-parent-layout="false"/>
                 </constraints>
                 <properties>
-                  <text value="Label"/>
+                  <background color="-13149860"/>
+                  <text value=""/>
+                </properties>
+              </component>
+              <component id="787b9" class="javax.swing.JList" binding="ingredientsList">
+                <constraints>
+                  <grid row="0" column="0" row-span="6" col-span="1" vsize-policy="6" hsize-policy="2" anchor="0" fill="3" indent="0" use-parent-layout="false">
+                    <preferred-size width="150" height="50"/>
+                  </grid>
+                </constraints>
+                <properties>
+                  <background color="-13610925"/>
+                  <dropMode value="USE_SELECTION"/>
+                  <font name="Bookman Old Style" size="12" style="0"/>
+                  <foreground color="-13610925"/>
+                  <model/>
+                  <selectionBackground color="-3735570"/>
                 </properties>
               </component>
             </children>
           </grid>
+          <component id="33735" class="javax.swing.JTextArea" binding="directionsTa">
+            <constraints>
+              <grid row="2" column="1" row-span="1" col-span="1" vsize-policy="6" hsize-policy="6" anchor="0" fill="3" indent="0" use-parent-layout="false">
+                <preferred-size width="150" height="50"/>
+              </grid>
+            </constraints>
+            <properties>
+              <background color="-13610925"/>
+              <font name="Bookman Old Style" size="12" style="0"/>
+              <foreground color="-13610925"/>
+            </properties>
+          </component>
+          <component id="6dea2" class="javax.swing.JButton" binding="Home_page">
+            <constraints>
+              <grid row="3" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="0" indent="0" use-parent-layout="false"/>
+            </constraints>
+            <properties>
+              <font name="Bookman Old Style" size="14" style="0"/>
+              <foreground color="-16169912"/>
+              <text value="Go back"/>
+            </properties>
+          </component>
         </children>
       </grid>
     </children>
