--- a/Code/JAVA/Recipes/src/recipes_gui/NewRecipe.form
+++ b/Code/JAVA/Recipes/src/recipes_gui/NewRecipe.form
@@ -13,7 +13,7 @@
       <title-color color="-4473925"/>
     </border>
     <children>
-      <grid id="27f42" layout-manager="GridLayoutManager" row-count="6" column-count="5" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
+      <grid id="27f42" layout-manager="GridLayoutManager" row-count="7" column-count="5" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
         <margin top="0" left="0" bottom="0" right="0"/>
         <constraints>
           <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="3" hsize-policy="3" anchor="0" fill="3" indent="0" use-parent-layout="false"/>
@@ -42,7 +42,7 @@
           </hspacer>
           <vspacer id="62714">
             <constraints>
-              <grid row="1" column="1" row-span="5" col-span="1" vsize-policy="6" hsize-policy="1" anchor="0" fill="2" indent="0" use-parent-layout="false"/>
+              <grid row="1" column="1" row-span="6" col-span="1" vsize-policy="6" hsize-policy="1" anchor="0" fill="2" indent="0" use-parent-layout="false"/>
             </constraints>
           </vspacer>
           <component id="87049" class="javax.swing.JLabel" binding="recipeNameLbl">
@@ -148,21 +148,6 @@
               <text value="Ingredients"/>
             </properties>
           </component>
-          <component id="58bd2" class="javax.swing.JList" binding="ingredientsList">
-            <constraints>
-              <grid row="5" column="0" row-span="1" col-span="1" vsize-policy="6" hsize-policy="2" anchor="8" fill="2" indent="0" use-parent-layout="false">
-                <preferred-size width="150" height="50"/>
-              </grid>
-            </constraints>
-            <properties>
-              <background color="-13610925"/>
-              <dropMode value="USE_SELECTION"/>
-              <font name="Bookman Old Style" size="12" style="0"/>
-              <foreground color="-6882305"/>
-              <model/>
-              <selectionBackground color="-3735570"/>
-            </properties>
-          </component>
           <component id="1dc88" class="javax.swing.JLabel" binding="directionsLbl">
             <constraints>
               <grid row="4" column="2" row-span="1" col-span="3" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
@@ -175,7 +160,7 @@
           </component>
           <component id="53c21" class="javax.swing.JTextArea" binding="directionsTa">
             <constraints>
-              <grid row="5" column="2" row-span="1" col-span="3" vsize-policy="6" hsize-policy="6" anchor="0" fill="2" indent="0" use-parent-layout="false">
+              <grid row="5" column="2" row-span="2" col-span="3" vsize-policy="6" hsize-policy="6" anchor="0" fill="2" indent="0" use-parent-layout="false">
                 <preferred-size width="150" height="50"/>
               </grid>
             </constraints>
@@ -183,6 +168,26 @@
               <background color="-13610925"/>
               <font name="Bookman Old Style" size="12" style="0"/>
               <foreground color="-6947585"/>
+            </properties>
+          </component>
+          <component id="f664a" class="javax.swing.JTextField" binding="ingredientsNameTf">
+            <constraints>
+              <grid row="5" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="6" anchor="9" fill="0" indent="0" use-parent-layout="false">
+                <preferred-size width="150" height="-1"/>
+              </grid>
+            </constraints>
+            <properties>
+              <font name="Bookman Old Style" size="12" style="0"/>
+            </properties>
+          </component>
+          <component id="c47ce" class="javax.swing.JButton" binding="plusIngredientBtn">
+            <constraints>
+              <grid row="6" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
+            </constraints>
+            <properties>
+              <font name="Bookman Old Style" size="14" style="0"/>
+              <foreground color="-16169912"/>
+              <text value="+"/>
             </properties>
           </component>
         </children>
